src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_WritingReadOnlySimpleProperty.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
>	
		<ListBox ActualWidth="500.0" />
</DockPanel>
</Page>
